// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCounterParty receive matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      From: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;

exports[`EventCounterParty send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      To: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;

exports[`EventCounterParty withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-text-901oao css-textMultiLine-cens5h"
    dir="auto"
    style={
      Object {
        "WebkitLineClamp": 2,
        "color": "rgba(66,69,74,1.00)",
        "fontFamily": "Roboto",
        "fontSize": "16px",
        "fontWeight": "normal",
        "lineHeight": "22px",
        "textAlign": "left",
        "textDecoration": "none",
        "textTransform": "capitalize",
      }
    }
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "10px",
          "fontWeight": "normal",
          "lineHeight": "14px",
          "marginRight": "3px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      From: 
    </span>
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
      dir="auto"
      style={
        Object {
          "color": "rgba(66,69,74,1.00)",
          "fontFamily": "Roboto",
          "fontSize": "16px",
          "fontWeight": "500",
          "lineHeight": "19px",
          "textAlign": "center",
          "textDecoration": "none",
          "textTransform": "none",
        }
      }
    >
      Misao Matimbo
    </span>
  </div>
</div>
`;
